Updated user DPP
